LLD Code added