@@ -31,10 +31,10 @@ public class EmployeeFactory extends Employee {
 		employees.add(new Employee("2017Emp00031", "Chris", "Martin", 2200000, 2, Arrays.asList(Delta, TwoFactorAuth)));
 		employees.add(new Employee("2013Emp0872", "Sanjay", "Singhania", 2200000, 3,
 				Arrays.asList(Pegasus, Delta, RemoveUsers, DataTransition)));
-		employees.add(new Employee("2022Emp0087", "Babu", "Rao", 900000, 1, Arrays.asList(TwoFactorAuth)));
+		employees.add(new Employee("2022Emp0087", "Babu", "Rao", 900000, 1, List.of(TwoFactorAuth)));
 		employees.add(new Employee("2019Emp0050", "Dev", "Anand", 1300000, 1, Arrays.asList(RemoveUsers, CommonUI)));
-		employees.add(new Employee("2023Emp0934", "Shruti", "Sen", 1100000, 1, Arrays.asList(Pegasus)));
-		employees.add(new Employee("2023Emp1033", "Akshay", "Kumar", 1200000, 0, Arrays.asList(Delta)));
+		employees.add(new Employee("2023Emp0934", "Shruti", "Sen", 1100000, 1, List.of(Pegasus)));
+		employees.add(new Employee("2023Emp1033", "Akshay", "Kumar", 1200000, 0, List.of(Delta)));
 		employees.add(new Employee("2015Emp0009", "Babu", "Dutt", 2600000, 2,
 				Arrays.asList(Verification, RemoveUsers, TwoPhaseDeployment)));
 
